# stochopy

./: .buildinfo  .codacy.yml  .coveragerc  .gitignore  .prospector.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  genindex.html  github_deploy_key_keurfonluu_stochopy.enc  index.html  objects.inv  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tasks.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: factory.doctree  index.doctree  optimize.doctree  sample.doctree
.doctrees/examples/: basic_usage.doctree  index.doctree  sg_execution_times.doctree
.doctrees/gallery/: index.doctree
.github/: sample.py
.github/workflows/: ci.yml  doc.yml
_downloads/e6b70813a85677533f81a22135501dae/: basic_usage.ipynb
_modules/: index.html
_modules/stochopy/factory/: benchmark.html
_modules/stochopy/optimize/: _helpers.html
_modules/stochopy/sample/: _helpers.html
_sources/: index.rst.txt
_sources/api/: optimize.rst.txt
_sources/examples/: basic_usage.rst.txt  index.rst.txt  sg_execution_times.rst.txt
api/: factory.html  index.html  optimize.html  sample.html
doc/: requirements.txt
doc/source/: conf.py  index.rst
examples/: basic_usage.html  basic_usage.py  example_evolutionary.py  example_monte_carlo.py  example_mpi.py  example_plot.py  example_synchronous.py  index.html  sg_execution_times.html  stochopy_viewer.py
gallery/: index.html
stochopy/: __about__.py  __init__.py  _common.py  benchmark_functions.py  evolutionary_algorithm.py  gui.py  monte_carlo.py  stochopy.py
stochopy/factory/: benchmark.py
stochopy/gui/: __init__.py  gui.py  ttk_spinbox.py
stochopy/optimize/: __init__.py  _common.py  _helpers.py
stochopy/sample/: __init__.py  _common.py  _helpers.py
stochopy/tests/: test_evolutionary_algorithm.py  test_monte_carlo.py
test/: helpers.py  test_evolutionary_algorithm.py  test_factory.py  test_monte_carlo.py  test_optimize.py  test_sample.py
tests/: helpers.py  test_factory.py
(+35 files in other folders)
