[metadata]
name = stochopy
version = file: stochopy/VERSION
author = Keurfon Luu
email = keurfonluu@outlook.com
description = Python library for stochastic numerical optimization
url = https://github.com/keurfonluu/stochopy
project_urls =
    Code=https://github.com/keurfonluu/stochopy
    Issues=https://github.com/keurfonluu/stochopy/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    importlib_metadata
    numpy
    joblib >= 0.12
python_requires = >= 3.7
setup_requires =
    setuptools >= 42
    wheel

[options.package_data]
stochopy =
    VERSION